<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
        <item
            android:id="@+id/nav_trans"
            android:icon="@drawable/ic_translate_black_24dp"
            android:title="@string/txttranslate" />
    <item
        android:id="@+id/nav_fav"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:title="@string/txtfav" />
    <item
        android:id="@+id/nav_games"
        android:icon="@drawable/ic_games_black_24dp"
        android:title="@string/txtgame" />
    <item
        android:id="@+id/nav_popup"
        android:icon="@drawable/ic_popup_black_24dp"
        android:title="@string/txtpopupwd" />
    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/txtinfoapp" />
            <item
                android:id="@+id/nav_policy"
                android:icon="@drawable/ic_event_note_black_24dp"
                android:title="@string/txtpolicy" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/txtshareapp" />
        </menu>
    </item>

</menu>
