<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:weightSum="10"
              app:layout_behavior="@string/appbar_scrolling_view_behavior"
              tools:context=".ui.main.view.MainActivity"
              tools:showIn="@layout/activity_main">

    <LinearLayout
            android:layout_weight="9"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:weightSum="10">

        <RelativeLayout
                android:id="@+id/hihi"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4">

            <androidx.cardview.widget.CardView
                    android:id="@+id/wordoftheday"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:weightSum="10">

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="2.5"
                            android:background="@drawable/huunghivietlao"
                            android:orientation="horizontal"
                            android:weightSum="10">

                        <TextView
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="8.5"
                                android:gravity="center_vertical"
                                android:text="@string/txtwotd"
                                android:textColor="@color/colorAccent"
                                android:textSize="20sp"/>

                        <ImageView
                                android:id="@+id/imgFavTC"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_weight="1.5"
                                android:src="@drawable/ic_favorite_border_black_24dp"
                                android:tint="@color/colorPrimary"/>

                    </LinearLayout>

                    <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="7.5"
                            android:padding="10dp">

                        <TextView
                                android:id="@+id/txtWordSG"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text=""
                                android:textColor="@color/colorPrimaryDark"
                                android:textSize="30sp"
                                android:textStyle="bold"/>

                        <TextView
                                android:id="@+id/txtWordSpell"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/txtWordSG"
                                android:text=""
                                android:textSize="18sp"
                                android:textStyle="italic"/>

                        <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_toRightOf="@id/txtWordSpell"
                                android:src="@drawable/ic_volume_up_black_24dp"/>

                        <TextView
                                android:id="@+id/txtMeanSG"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/txtWordSpell"
                                android:text=""
                                android:textSize="20sp"
                                android:textStyle="italic"/>

                        <TextView
                                android:id="@+id/txtEx"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/txtMeanSG"
                                android:text=""
                                android:textSize="18sp"
                                android:textStyle="italic"/>

                    </RelativeLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </RelativeLayout>


        <androidx.cardview.widget.CardView
                android:id="@+id/cardFav"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_below="@id/hihi"
                android:layout_margin="5dp"
                android:layout_weight="2"
                android:onClick="ClickFav">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="10">

                <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:src="@drawable/ic_favorite_black_24dp"
                        android:tint="@color/colorPrimaryDark"/>

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="7"
                        android:gravity="center_vertical"
                        android:text="@string/txtfav"
                        android:textColor="@color/colorPrimary"
                        android:textSize="30sp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:id="@+id/cardTran"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_below="@id/cardFav"
                android:layout_margin="5dp"
                android:layout_weight="2"
                android:onClick="ClickTrans">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="10">

                <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:src="@drawable/ic_translate_black_24dp"
                        android:tint="@color/colorPrimaryDark"/>

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="7"
                        android:gravity="center_vertical"
                        android:text="@string/txttranslate"
                        android:textColor="@color/colorPrimary"
                        android:textSize="30sp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_below="@id/cardTran"
                android:layout_margin="5dp"
                android:layout_weight="2"
                android:onClick="ClickInsertWord">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="10">

                <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:src="@drawable/ic_games_black_24dp"
                        android:tint="@color/colorPrimaryDark"/>

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="7"
                        android:gravity="center_vertical"
                        android:text="@string/txtaddword"
                        android:textColor="@color/colorPrimary"
                        android:textSize="30sp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <RelativeLayout
            android:layout_alignParentBottom="true"
            android:background="@drawable/border_edit"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
    </RelativeLayout>
</LinearLayout>